plugins {
    id 'java'
    id 'org.springframework.boot' version '3.4.1' // 3.5.9 -> 3.4.1 (또는 3.3.x)로 변경
    id 'io.spring.dependency-management' version '1.1.7'
}

group = 'Yogi-Mangchi'
version = '0.0.1-SNAPSHOT'
description = 'Demo project for Spring Boot'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
    // 시큐리티, oauth2
    implementation 'org.springframework.boot:spring-boot-starter-security'
    testImplementation 'org.springframework.security:spring-security-test'
    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
    // 벨리데이션
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    // jwt
    implementation 'io.jsonwebtoken:jjwt-api:0.13.0'
    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.13.0'
    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.13.0'

    // jpa
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'

	// 스웨거
	dependencies {
		// Spring Boot 3.x 기준 최신 라이브러리
		implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.5'
	}

    // 레디스
	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	compileOnly 'org.projectlombok:lombok'
	runtimeOnly 'org.postgresql:postgresql'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

    // (Spring Cloud AWS - S3)
    implementation platform("io.awspring.cloud:spring-cloud-aws-dependencies:3.1.1")
    implementation 'io.awspring.cloud:spring-cloud-aws-starter-s3'

    implementation 'org.springframework.boot:spring-boot-starter-websocket'

    // 웹클라이언트
    implementation 'org.springframework.boot:spring-boot-starter-webflux'

	// QueryDSL
	implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
	annotationProcessor "com.querydsl:querydsl-apt:5.0.0:jakarta"
	annotationProcessor "jakarta.annotation:jakarta.annotation-api"
	annotationProcessor "jakarta.persistence:jakarta.persistence-api"
}

tasks.named('test') {
	useJUnitPlatform()
}
